--- a/酷炫的CSS动画效果/带动画效果的渐变边框.html
+++ b/酷炫的CSS动画效果/带动画效果的渐变边框.html
@@ -7,10 +7,10 @@
   	.con {
   		width: 500px;
   		height: 500px;
-  		/*display: flex;
+  		display: flex;
   		flex-direction: column;
   		justify-content: center;
-  		align-items: center;*/
+  		align-items: center;
   		background-image: linear-gradient(#5b53fd,#87a8fb);
   	}
     .box {
@@ -20,11 +20,29 @@
 			position: relative;
 			overflow: hidden;
 			border-radius: 4px;
-			box-shadow: 0 10px 15px rgba(0,0,0,.3);
+			box-shadow: 0 10px 15px rgba(0,0,0,.7);
+			color: #000;
+			font-size: 16px;
+			vertical-align: middle;
+    }
+    .box>* {
+    	position: relative;
+    	z-index: 1;
+    	padding-left: 20px;
+    }
+    .box:nth-child(1) {
+    	z-index: 3;
+    }
+    .box:nth-child(2) {
+    	z-index: 2;
+    }
+    .box:nth-child(3) {
+    	z-index: 1;
     }
     .box::before {
 			content: "";
 			display: inline-block;
+			position: absolute;
 			width: 310px;
 			height: 310px;
 			margin-top: -125px;
@@ -55,9 +73,15 @@
 </head>
 <body>
   <div class="con">
-    <div class="box">123</div>
-    <div class="box"></div>
-    <div class="box"></div>
+    <div class="box">
+    	<p>123</p>
+    </div>
+    <div class="box">
+    	<p>456</p>
+    </div>
+    <div class="box">
+			<p>789</p>
+    </div>
   </div>
   <script>
     // var angle = 0
